--- a/styles.css
+++ b/styles.css
@@ -429,7 +429,9 @@
     .university-name {
         font-size: 20px;
     }
-
+    .hero {
+        height: 1000px;
+    }
     .hero-text {
         font-size: 36px;
     }
